--- a/linux_service/CMakeLists.txt
+++ b/linux_service/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.10)
 
 project(safe_duck)
 
-add_executable(safe_duck safe_duck.cpp)
+add_executable(safe_duck safe_duck.cpp msg.cpp tools.cpp global.cpp)
