--- a/linux_kernel/Makefile
+++ b/linux_kernel/Makefile
@@ -1,6 +1,6 @@
 CONFIG_MODULE_SIG=n
 obj-m += safe_duck.o
-safe_duck-objs := main.o msg.o global.o some_struct.o ip_hashmap.o network.o client_msg.o
+safe_duck-objs := main.o msg.o global.o some_struct.o ip_hashmap.o network.o client_msg.o my_kallsyms_lookup_name.o hook.o
 PWD  := $(shell pwd)
 KVER := $(shell uname -r)
 KDIR := /lib/modules/$(KVER)/build
