去掉r0的hook,增加IP屏蔽记录

--- a/linux_service/CMakeLists.txt
+++ b/linux_service/CMakeLists.txt
@@ -2,4 +2,6 @@ cmake_minimum_required(VERSION 3.10)
 
 project(safe_duck)
 
-add_executable(safe_duck safe_duck.cpp msg.cpp tools.cpp global.cpp)
+set(CMAKE_BUILD_TYPE Debug)
+
+add_executable(safe_duck safe_duck.cpp msg.cpp tools.cpp global.cpp ip_blacktable.cpp events/network.cpp sqlite/sqlite3.c)
